--- a/src/app/components/read-all/read-all.component.html
+++ b/src/app/components/read-all/read-all.component.html
@@ -3,12 +3,12 @@
     NOVO TO-DO
   </button>
 
-  <div class="content">
+  <div class="content" *ngFor="let item of list">
     <mat-card class="mat-elevation-z8">
-      <p>Data para finalizar:</p>
+      <p>Data para finalizar:{{item.dataParaFinalizar}} </p>
       <mat-card-header>
-        <mat-card-title>Shiba Inu</mat-card-title>
-        <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+        <mat-card-title>{{ item.titulo}}</mat-card-title>
+        <mat-card-subtitle>{{item.descricao}}</mat-card-subtitle>
       </mat-card-header>
 
       <div class="actions">
