24. Funcionalidade Badge (Parte 1)

--- a/src/app/components/read-all/read-all.component.html
+++ b/src/app/components/read-all/read-all.component.html
@@ -1,14 +1,21 @@
 <div class="container">
+  
+  <div class="badge">
+    <button matBadge="{{ closed }}" mat-stroked-button color="primary">
+      Tasks Finalizadas
+    </button>
+  </div>
+
   <button class="novo-todo mat-elevation-z8" mat-stroked-button color="primary">
     NOVO TO-DO
   </button>
 
   <div class="content" *ngFor="let item of list">
     <mat-card class="mat-elevation-z8">
-      <p>Data para finalizar:{{item.dataParaFinalizar}} </p>
+      <p>Data para finalizar:{{ item.dataParaFinalizar }}</p>
       <mat-card-header>
-        <mat-card-title>{{ item.titulo}}</mat-card-title>
-        <mat-card-subtitle>{{item.descricao}}</mat-card-subtitle>
+        <mat-card-title>{{ item.titulo }}</mat-card-title>
+        <mat-card-subtitle>{{ item.descricao }}</mat-card-subtitle>
       </mat-card-header>
 
       <div class="actions">
