--- a/src/app/components/read-all/read-all.component.html
+++ b/src/app/components/read-all/read-all.component.html
@@ -19,7 +19,7 @@
       </mat-card-header>
 
       <div class="actions">
-        <button mat-mini-fab color="primary"><mat-icon>done</mat-icon></button>
+        <button (click)="finalizar(item)"  mat-mini-fab color="primary"><mat-icon>done</mat-icon></button>
         <button mat-mini-fab color="accent"><mat-icon>edit</mat-icon></button>
         <button (click)="delete(item.id)" mat-mini-fab color="warn"><mat-icon>delete</mat-icon></button>
       </div>
