--- a/src/app/components/create/create.component.html
+++ b/src/app/components/create/create.component.html
@@ -22,6 +22,6 @@
 
   <div class="buttons">
     <button mat-stroked-button color="primary">Criar</button>
-    <button mat-stroked-button color="warn">Cancelar</button>
+    <button (click)="cancel()" mat-stroked-button color="warn">Cancelar</button>
   </div>
 </form>
