--- a/src/app/components/read-all/read-all.component.html
+++ b/src/app/components/read-all/read-all.component.html
@@ -6,7 +6,7 @@
     </button>
   </div>
 
-  <button class="novo-todo mat-elevation-z8" mat-stroked-button color="primary">
+  <button routerLink="create" class="novo-todo mat-elevation-z8" mat-stroked-button color="primary">
     NOVO TO-DO
   </button>
 
