--- a/src/app/components/create/create.component.html
+++ b/src/app/components/create/create.component.html
@@ -3,7 +3,7 @@
 
   <mat-form-field class="data-finalizar" appearance="fill">
     <mat-label>Data para finalizar</mat-label>
-    <input matInput [matDatepicker]="dp3" disabled />
+    <input [(ngModel)]="todo.dataParaFinalizar" name="todo.dataParaFinalizar" matInput [matDatepicker]="dp3" disabled />
     <mat-datepicker-toggle matSuffix [for]="dp3"></mat-datepicker-toggle>
     <mat-datepicker #dp3 disabled="false"></mat-datepicker>
   </mat-form-field>
@@ -11,17 +11,17 @@
   <div class="forms">
     <mat-form-field class="form">
       <mat-label>Título</mat-label>
-      <input matInput placeholder="Ex. Spring" />
+      <input [(ngModel)]="todo.titulo" name="todo.titulo" matInput placeholder="Ex. Spring" />
     </mat-form-field>
 
     <mat-form-field class="form">
       <mat-label>Descrição</mat-label>
-      <input matInput placeholder="Ex. Estudar Spring 2.4.5" />
+      <input [(ngModel)]="todo.descricao" name="todo.descricao"  matInput placeholder="Ex. Estudar Spring 2.4.5" />
     </mat-form-field>
   </div>
 
   <div class="buttons">
-    <button mat-stroked-button color="primary">Criar</button>
+    <button (click)="create()" mat-stroked-button color="primary">Criar</button>
     <button (click)="cancel()" mat-stroked-button color="warn">Cancelar</button>
   </div>
 </form>
